# criador_etp

./: .env  .gitignore  Dockerfile  README.md  agent.py  data_colection.ipynb  database.db  frontend.py  hello.py  prompt_agents.py  pyproject.toml  start.py
ETPs_transformeds/: 1486795_ETP.md  1526387_ETP.md  1568338_ETP.md  1600146_ETP.md  1633852_ETP.md  1638023_ETP.md  1639643_ETP.md  1641962_ETP.md  1644667_ETP.md  1699205_ETP.md  1701889_ETP.md  1717867_ETP.md  1748277_ETP.md  1755301_ETP.md  1788400_ETP.md  1793368_ETP.md
ETPs_transformeds - Copia/: 1453480_ETP.md  1486795_ETP.md  1510967_ETP.md  1526387_ETP.md  1546382_ETP.md  1552712_ETP.md  1568338_ETP.md  1579028_ETP.md  1582755_ETP.md  1600146_ETP.md  1602178_ETP.md  1605155_ETP.md  1616859_ETP.md  1623086_ETP.md  1633577_ETP.md  1633852_ETP.md  1634386_ETP.md  1638023_ETP.md  1639643_ETP.md  1641962_ETP.md  1644667_ETP.md  1645859_ETP.md  1699205_ETP.md  1701889_ETP.md  1704434_ETP.md  1712073_ETP.md  1717867_ETP.md  1748277_ETP.md  1748821_ETP.md  1755301_ETP.md  1788400_ETP.md  1793368_ETP.md
dados/: legisRes_CNJ_468.md
src/: agent.py  bases_de_conhecimento.py  configs.py  dados.py  db.py  etp.py  main.py  my_path.py  prompt_agents.py  template.py  tools.py  users.py  vectordb.py
src/base_de_conhecimento/base_de_conhecimento_etps/: 1510967_ETP.md  1546382_ETP.md  1552712_ETP.md  1579028_ETP.md  1582755_ETP.md  1602178_ETP.md  1605155_ETP.md  1616859_ETP.md  1623086_ETP.md  1633577_ETP.md  1634386_ETP.md  1645859_ETP.md  1704434_ETP.md  1712073_ETP.md  (+1 more)
src/pages/: formulario.py  login.py  resultado.py
(+10 files in other folders)
